ch1/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: helloworld:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: IfNotPresent
