ch1/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-http
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
